--- a/test.html
+++ b/test.html
@@ -19,6 +19,6 @@
 <!-- Абзац -->
 <p>Текст документа</p> 
  <!-- Кнопка с определенным действием -->
-<button onclick="countRabbits()">Показать сообщение</button>
+<button onclick="showMessage()">Показать сообщение</button>
 </body>
 </html>
